 * Implement ExecutionContext with contextvars, mandating it to be used as ContextManager from now on (#359).
 * Cache session data on UrlBoundView (#365)
 * Added size to SelectInput (#362)
 * Changed placeholder to display the default of the field under certain conditions (#363).
 * Deprecated use of @exposed in favour of ExposedNames (#373).

 -- Iwan Vosloo <iwan@reahl.org>  Fri, 12 Jul 2022 07:56:00 +0200

python-reahl (6.0.2) unstable; urgency=low

 * Fixed packaging to include example etc files (#352).

 -- Iwan Vosloo <iwan@reahl.org>  Fri, 29 Apr 2022 07:56:00 +0200

python-reahl (6.0.1) unstable; urgency=low

 * Fixed packaging to include example toml and cfg files (#350).

 -- Iwan Vosloo <iwan@reahl.org>  Wed, 27 Apr 2022 16:28:00 +0200

python-reahl (6.0.0) unstable; urgency=low

 * Changed to allow PEP517 conformant packaging (#302).
 * Fixed column type to work on mysql (#346).

 -- Iwan Vosloo <iwan@reahl.org>  Fri, 22 Apr 2022 07:28:00 +0200

python-reahl (5.2.2) unstable; urgency=low

 * Fixed links in documentation.

 -- Iwan Vosloo <iwan@reahl.org>  Mon, 21 Mar 2022 19:42:00 +0200

python-reahl (5.2.1) unstable; urgency=low

 * Upped version while working out signing issues during release process.

 -- Iwan Vosloo <iwan@reahl.org>  Mon, 21 Mar 2022 17:32:00 +0200

python-reahl (5.2.0) unstable; urgency=low

 * Add Chart widget for plotly (#281).
 * Add PayPal support (#328).
 * Add JsonField and NumericField
 * Implemented CSRF protection (#153).
 * Changed to use rssmin and rcsmin instead of slimit and cssmin (#336).
 * Upgraded jQuery from 3.5.1 to 3.6.0.
 * Upgraded jQueryUI from 1.12.1 to 1.13.1.
 * Upgraded underscore.js from 1.13.1 to 1.13.2.
 * Upgraded plotly.js from 2.2.0 to 2.9.0.
 * Upgraded Bootstrap from 4.5.3 to 4.6.1.
 * Changed dependency on babel to be between 2.1.0 and 2.9.x
 * Changed dependency on twine to be between 1.15.0 and 3.8.x
 * Changed dependency on tzlocal to be between 2.0.0 and 4.1.x